--- a/templates/home.html
+++ b/templates/home.html
@@ -59,12 +59,11 @@
         <tbody>
             {% if dates %}
                 {% for d in dates %}
-                <tr data-run-id="{{ date_runs.get(d, '') }}">
-                    <td><a href="/ui/date/{{ d }}">{{ d }}</a></td>
-                    <td class="stars" data-run-id="{{ date_runs.get(d, '') }}" data-current-rating="{{ date_ratings.get(d, 0) }}">
+                <tr data-run-id="{{ d.run_id or '' }}">
+                    <td><a href="/ui/date/{{ d.day }}">{{ d.day }}</a></td>
+                    <td class="stars" data-run-id="{{ d.run_id or '' }}" data-current-rating="{{ d.rating or 0 }}">
                         {% for i in range(1, 6) %}
-                            {% set rating = date_ratings.get(d, 0) %}
-                            <span class="star{% if i <= rating %} filled{% endif %}" data-rating="{{ i }}">{% if i <= rating %}&#9733;{% else %}&#9734;{% endif %}</span>
+                            <span class="star{% if i <= d.rating %} filled{% endif %}" data-rating="{{ i }}">{% if i <= d.rating %}&#9733;{% else %}&#9734;{% endif %}</span>
                         {% endfor %}
                     </td>
                 </tr>
@@ -75,14 +74,14 @@
         </tbody>
     </table>
     <div class="pagination">
-        {% if has_prev %}
-            <a href="/?page={{ page - 1 }}">&#8592; Prev</a>
+        {% if pagination.has_prev %}
+            <a href="/?page={{ pagination.page - 1 }}">&#8592; Prev</a>
         {% else %}
             <span class="disabled">&#8592; Prev</span>
         {% endif %}
-        <span>Page {{ page }} of {{ total_pages }}</span>
-        {% if has_next %}
-            <a href="/?page={{ page + 1 }}">Next &#8594;</a>
+        <span>Page {{ pagination.page }} of {{ pagination.total_pages }}</span>
+        {% if pagination.has_next %}
+            <a href="/?page={{ pagination.page + 1 }}">Next &#8594;</a>
         {% else %}
             <span class="disabled">Next &#8594;</span>
         {% endif %}
